Implementing Searching functionality for 'Countries' by 'name'. The filter method supports 2 more fields: 'region', 'alpha2Code' (ISO). And refactored the file structure a little bit to be more convenient.

--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -9,4 +9,8 @@
   {{ form.as_p }}
   <button type="submit">Login</button>
 </form>
+<div>
+  <p>Don't have account?</p>
+  <a href="{% url 'signup' %}">Sign Up</a>
+</div>
 {% endblock %}
