--- a/app/country/templates/country_detail.html
+++ b/app/country/templates/country_detail.html
@@ -8,5 +8,9 @@
     <div class="row">Capital: {{ object.capital }}</div>
     <div class="row">Area: {{ object.area }}</div>
     <div class="row">Population: {{ object.population }}</div>
-    <div class="row"><img style="border: 1px solid; width: 350px; height: 250px;" src="{{ object.flag }}" alt="img"></div>
+    <div class="row">Region: {{ object.region }}</div>
+    <div class="row">
+        <img style="border: 1px solid; width: 350px; height: 250px;"
+             src="{{ object.flag }}" alt="img">
+    </div>
 {% endblock %}
