--- a/app/country/templates/country_list.html
+++ b/app/country/templates/country_list.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <form method="GET" action="">
-    <input type="text" name="name" placeholder="Search Countries by name" />
-
+    <input type="text" name="name" placeholder="Search Countries by Name" />
+    
     <input type="submit" value="Search" />
 </form>
 {% if list_countries %}
