--- a/app/diplomat/templates/diplomat_list.html
+++ b/app/diplomat/templates/diplomat_list.html
@@ -1,21 +1,21 @@
 {% extends 'base.html' %}
 
-{% block title %}All Countries{% endblock %}
+{% block title %}Diplomats{% endblock %}
 
 {% block content %}
 
 <form method="GET" action="">
-    <input type="text" name="name" placeholder="Search Countries by Name" />
+    <input type="text" name="name" placeholder="Search Diplomats by Name" />
 
-    <label for="region">Region:</label>
-    <select name="region" id="region">
-        {% if region_selected == '' %}
+    <label for="path">Path:</label>
+    <select name="path" id="path">
+        {% if path_selected == '' %}
             <option value="" selected="selected"></option>
         {% else %}
             <option value=""></option>
         {% endif %}
-        {% for choice in region_choices %}
-            {% if region_selected == choice.0 %}
+        {% for choice in path_choices %}
+            {% if path_selected == choice.0 %}
                 <option value="{{ choice.0 }}" selected="selected">
                     {{ choice.1 }}
                 </option>
@@ -49,13 +49,16 @@
     <input type="submit" value="Search" />
 </form>
 
-{% if list_countries %}
-    {% for country in list_countries %}
+{% if list_diplomats %}
+    {% for diplomat in list_diplomats %}
     <tr>
-        <td>{{ country.name }}</td>
-        <td>{{ country.alpha2Code }}</td>
+        <td>Name: {{ diplomat.full_name }}</td>
+        <td>ISO2 Code: {{ diplomat.alpha2Code }}</td>
+        <td>Country: {{ diplomat.country }}</td>
         <td>
-            <a  href="{% url 'country-detail'  country.alpha2Code  %}">details</a>
+            <a  href="{% url 'diplomat-detail'  diplomat.id  %}">Details</a>
+            <a  href="{% url 'diplomat-edit'  diplomat.id  %}">Edit</a>
+            <a  href="{% url 'diplomat-delete'  diplomat.id  %}">Delete</a>
         </td>
     </tr>
     {% endfor %}
