--- a/app/country/templates/country_detail.html
+++ b/app/country/templates/country_detail.html
@@ -3,14 +3,43 @@
 {% block title %}Country - {{ object.name }}{% endblock %}
 
 {% block content %}
-    <div class="row">Name: {{ object.name }}</div>
-    <div class="row">ISO: {{ object.alpha2Code }}</div>
-    <div class="row">Capital: {{ object.capital }}</div>
-    <div class="row">Area: {{ object.area }}</div>
-    <div class="row">Population: {{ object.population }}</div>
-    <div class="row">Region: {{ object.region }}</div>
-    <div class="row">
-        <img style="border: 1px solid; width: 350px; height: 250px;"
+<table class="table table table-hover">
+    <tbody>
+    <tr>
+        <td><div class="col-md-1"><strong>Name:</strong></div></td>
+        <td><div class="col-md-2">{{ object.name }}</div></td>
+    </tr>
+    <tr>
+        <td><div class="col-md-1"><strong>ISO Code:</strong></div></td>
+        <td><div class="col-md-2">{{ object.alpha2Code }}</div></td>
+    </tr>
+    <tr>
+        <td><div class="col-md-1"><strong>Capital:</strong></div></td>
+        <td><div class="col-md-2">{{ object.capital }}</div></td>
+    </tr>
+    <tr>
+        <td><div class="col-md-1"><strong>Area:</strong></div></td>
+        <td><div class="col-md-2">{{ object.area }}</div></td>
+    </tr>
+    <tr>
+        <td><div class="col-md-1"><strong>Population:</strong></div></td>
+        <td><div class="col-md-2">{{ object.population }}</div></td>
+    </tr>
+    <tr>
+        <td><div class="col-md-1"><strong>Region:</strong></div></td>
+        <td><div class="col-md-2">{{ object.region }}</div></td>
+    </tr>
+    <tr>
+        <td>
+            <img style="border: 1px solid; width: 350px; height: 250px;"
              src="{{ object.flag }}" alt="img">
+        </td>
+    </tr>
+    </tbody>
+</table>
+<div class="row">
+    <div class="col-md-2 col-md-offset-5 text-center">
+        <a href="{% url 'country-list'  %}"><button class="btn btn-primary btn-lg">All Countries</button></a>
     </div>
+</div>
 {% endblock %}
