--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,8 +4,14 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!
-  <p><a href="{% url 'logout' %}">Logout</a></p>
+  <div class="row">
+    <h1>Hi {{ user.username }}!</h1>
+  </div>
+  <div class="row">
+    <div class="col-sm-2"><a href="{% url 'country-list'  %}"><button class="btn btn-primary btn-lg">All Countries</button></a></div>
+    <div class="col-sm-2"><a href="{% url 'diplomat-list'  %}"><button class="btn btn-primary btn-lg">All Diplomats</button></a></div>
+    <div class="col-sm-2"><a href="{% url 'logout'  %}"><button class="btn btn-primary btn-lg">Logout</button></a></div>
+  </div>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Login</a>
